# goal

./: .gitignore  README.md  cabal.project  hie.yaml  hoogle.sh  loop.sh  run-example.sh  stack.yaml
applications/goal-plot/: goal-plot.cabal
applications/goal-plot/Goal/: Plot.hs
applications/goal-plot/executables/: goal-plot.hs
applications/neural-data/: LICENSE  NeuralData.hs  average.hs  cv-analysis.hs  cv-plot.gpi  goal-neural-data.cabal  neural-data-cv.gpi  neural-data-cv.hs  neural-data.cabal  vm-analysis.hs  vm-plot.gpi
applications/neural-data/.old/: ChangeLog.md  neural-information-analysis.hs  von-mises-analysis.hs
applications/neural-data/Goal/: NeuralData.hs
applications/neural-data/coen-cagli-2015/: process-coen-cagli-2015.hs
applications/neural-data/data/plots/: neural-data-cv.gpi  plot-neural-cv.gpi
applications/neural-data/executables/: NeuralData.hs  Paths_neural_data.hs  analyze-neural-cv.hs  dataset-averages.hs  empirical-cv.hs  empirical-informations.hs  neural-data-cv.hs  neural-von-mises-analysis.hs  plot-neural-cv.gpi  process-coen-cagli-2015.hs  process-patterson-2013.hs  process-synthetic.hs  raw-size-dependence.hs  von-mises-divergence.hs  von-mises-fisher-information.hs  von-mises-fitting.hs  von-mises-inference-approximation.hs  von-mises-informations.hs  von-mises-posteriors.hs  von-mises-recursive-inference.hs  von-mises-size-dependence.hs  von-mises-tuning-curves.hs
applications/neural-data/executables/informations/: informations.hs
applications/neural-data/executables/old/: empirical-variability.hs  (+2 more)
applications/neural-data/gpis/: covariance-histogram.gpi  dff.gpi  mixture-sum-of-tuning-curves.gpi  population-parameter-histogram.gpi  preload.gpi  psts.gpi  tuning-curves.gpi  var.gpi  von-mises-informations.gpi
applications/neural-data/patterson-2013/: process-patterson-2013.hs
applications/neural-data/plots/: cv.gpi  dvg.gpi  inf.gpi  postload.gpi  preload.gpi  tcs.gpi
applications/neural-data/scripts/: graphics  process-amir-local.hs  process-coen-cagli-2015.hs  process-mixture-synthetic.hs  process-patterson-2013.hs  process-synthetic.hs
applications/neural-data/src/: NeuralData.hs
cognition/: README.md  goal-cognition.cabal
cognition/Goal/: Cognition.hs
cognition/Goal/Cognition/: Filter.hs
cognition/scripts/: conjugate-priors.hs  extended-kalman.hs  hidden-markov-model.hs
cognition/scripts/attractor/: Attractor.hs  population-code.hs  simulation.hs  train.hs
cognition/scripts/neural-hmm/: NeuralHMM.hs  simulation.hs  train.hs
cognition/scripts/pendulum/: Pendulum.hs  noise-correlation.hs  population-code.hs  simulation.hs  train.hs
core/: README.md  goal-core.cabal
core/Goal/: Core.hs
core/Goal/Core/: Circuit.hs  HList.hs  Isolines.hs  Plot.hs  Project.hs  Util.hs  Vector.hs  Workspace.hs
core/benchmarks/: convolutions.hs  linear-algebra.hs  linear.hs  multiplications.hs  outer-products.hs
core/data/: preload.gpi
core/executables/: goal-plot.hs  preload.gpi
core/scripts/: contours.hs  convolutions.hs  linear-algebra.hs
core/tests/: linear.hs
examples/: boltzmann.hs  categorical-inference.hs  conjugated-harmoniums.hs  factor-analysis.hs  gaussian-boltzmann.hs  goal-examples.cabal  gradient-descent.hs  hmog.hs  kalman-filter.hs  mixture-2d-von-mises.hs  mixture-com-based.hs  mixture-normal.hs  mnist-ppc.hs  multivariate-distributions.hs  neural-network.hs  population-code-2d-gaussian.hs  population-code-von-mises.hs  population-codes-2d.hs  population-codes.hs  univariate-analytical.hs  univariate-distributions.hs  univariate-numerical.hs  von-mises-mixture.hs
examples/archive/factor-analysis/: factor-analysis.hs
examples/archive/hmm/: hmm.hs
examples/archive/kalman-filter/: kalman-filter.gpi
examples/archive/neural-network/: regression-lines.gpi
examples/archive/normal-inference/: normal-inference.hs
examples/archive/normal-mixture/: log-likelihood-ascent.gpi  normal-mixture.hs
examples/archive/sensory-noise-conjugation/: population-coding.gpi  sensory-noise.gpi
examples/archive/tests/: normal.hs
examples/archive/von-mises-mixture/: cross-entropy-descent.gpi  mixture-components.gpi  von-mises-mixture.hs
examples/gradient-descent/: gradient-descent.hs
examples/plots/: univariate-distributions.py
geometry/: LICENSE  README.md  goal-geometry.cabal
geometry/Goal/: Geometry.hs
geometry/Goal/Geometry/: Differential.hs  Linear.hs  Manifold.hs  Map.hs  Vector.hs
geometry/benchmarks/: inversion.hs
geometry/scripts/: coordinates.hs  gradient-descent.hs
graphical/: LICENSE  README.md  goal-graphical.cabal
graphical/Goal/: Graphical.hs
graphical/Goal/Graphical/: Conditional.hs  Generative.hs  Hybrid.hs  Inference.hs  Learning.hs  Models.hs
graphical/benchmarks/: backpropagation.hs  com-poisson.hs  hmog.hs  regression.hs
graphical/tests/: gaussian.hs
probability/: README.md  goal-probability.cabal
probability/Goal/: Probability.hs
probability/Goal/Probability/: Conditional.hs  Distributions.hs  ExponentialFamily.hs  LatentVariable.hs  Statistical.hs
probability/benchmarks/: backprop.hs  backpropagation.hs  regression.hs
probability/benchmarks/regression/: cross-entropy-descent.gpi  log-likelihood-ascent.gpi  regression-lines.gpi  regression.hs
probability/data/: cross-entropy-descent.gpi  regression-lines.gpi
probability/gpis/: cross-entropy-descent.gpi  regression-lines.gpi
probability/scripts/: backpropagation.hs  clustering.hs  cross-entropy-descent.hs  divergence.hs  expectation-maximization.hs  gaussian-mixture.hs  multivariate.hs  poisson-binomial.hs  population-code-inference.hs  regression.hs  univariate.hs  von-mises-mixture.hs  von-mises.hs
probability/scripts/old/: gibbs.hs  population-code.hs
simulation/: goal-simulation.cabal
simulation/Goal/: Simulation.hs
simulation/Goal/Simulation/: Chain.hs  Circuit.hs  Flow.hs  Physics.hs  Plot.hs
simulation/benchmarks/: clustering.hs  projection.hs
simulation/scripts/: clustering.hs  contrastive-divergence.hs  information-projection.hs  pendulum-vector-field.hs  projection.hs  rk4.hs
(+307 files in other folders)
