name: goal-cognition
version: 0.10
synopsis: Filtering and Control in the goal framework
description: This library provides various algorithms for embodied artificial
    intelligence problems, namely filtering and control. This library includes
    an especially large number of scripts, and makes use of all the features
    available in Goal.
license: BSD3
license-file: LICENSE
extra-source-files: README.md
author: Sacha Sokoloski
maintainer: sokolo@mis.mpg.de
homepage: hub.darcs.net/alex404/goal
category: Math
build-type: Simple
cabal-version: >=1.10

library
    exposed-modules:
        Goal.Cognition
        Goal.Cognition.Filter
        --Goal.Cognition.Filter.Approximate,
        --Goal.Cognition.Filter.Optimal
        --Goal.Cognition.Filter.Harmonium,
        --Goal.Cognition.Filter.Harmonium.Statistics,
        --Goal.Cognition.Filter.Harmonium.Backpropagation,
        --Goal.Cognition.Filter.Harmonium.NeuralField
    default-extensions: TypeOperators, TypeFamilies, FlexibleInstances,
        FlexibleContexts, MultiParamTypeClasses, Arrows, ConstraintKinds
    build-depends:
        base==4.*,
        goal-core,
        goal-geometry,
        goal-probability,
        goal-simulation
    default-language: Haskell2010
    ghc-options: -O3

--executable hidden-markov-model
--    main-is: hidden-markov-model.hs
--    hs-source-dirs: scripts
--    ghc-options: -Wall -O -rtsopts -fno-warn-type-defaults
--        -fno-warn-missing-signatures -fno-warn-unused-do-bind
--    build-depends: base, goal-core==0.3, goal-geometry==0.3, goal-probability==0.3,
--        goal-simulation==0.3, goal-cognition==0.3, vector, directory, hmatrix
--    default-language: Haskell2010
--
--executable extended-kalman
--    main-is: extended-kalman.hs
--    hs-source-dirs: scripts
--    ghc-options: -Wall -O -rtsopts -fno-warn-type-defaults
--        -fno-warn-missing-signatures -fno-warn-unused-do-bind
--    build-depends: base, goal-core==0.3, goal-geometry==0.3, goal-probability==0.3,
--        goal-simulation==0.3, goal-cognition==0.3, vector, directory, hmatrix
--    default-language: Haskell2010
--
--executable conjugate-priors
--    main-is: conjugate-priors.hs
--    hs-source-dirs: scripts
--    ghc-options: -Wall -O -rtsopts -fno-warn-type-defaults
--        -fno-warn-missing-signatures -fno-warn-unused-do-bind
--    build-depends: base, goal-core==0.3, goal-geometry==0.3, goal-probability==0.3,
--        goal-simulation==0.3, goal-cognition==0.3, vector, directory, hmatrix
--    default-language: Haskell2010
--
--executable neural-hmm-train
--    main-is: train.hs
--    hs-source-dirs: scripts/neural-hmm
--    other-modules: NeuralHMM
--    ghc-options: -Wall -O -rtsopts -fno-warn-type-defaults
--        -fno-warn-missing-signatures -fno-warn-unused-do-bind
--    build-depends: base, goal-core==0.3, goal-geometry==0.3, goal-probability==0.3,
--        goal-simulation==0.3, goal-cognition==0.3, vector, directory, hmatrix, parallel
--    default-language: Haskell2010
--
--executable neural-hmm-simulation
--    main-is: simulation.hs
--    hs-source-dirs: scripts/neural-hmm
--    other-modules: NeuralHMM
--    ghc-options: -Wall -O -rtsopts -fno-warn-type-defaults
--        -fno-warn-missing-signatures -fno-warn-unused-do-bind
--    build-depends: base, goal-core==0.3, goal-geometry==0.3, goal-probability==0.3,
--        goal-simulation==0.3, goal-cognition==0.3, vector, directory, hmatrix
--    default-language: Haskell2010
--
--executable attractor-population-code
--    main-is: population-code.hs
--    hs-source-dirs: scripts/attractor
--    other-modules: Attractor
--    ghc-options: -Wall -O -rtsopts -fno-warn-type-defaults
--        -fno-warn-missing-signatures -fno-warn-unused-do-bind
--    build-depends: base, goal-core==0.3, goal-geometry==0.3, goal-probability==0.3,
--        goal-simulation==0.3, goal-cognition==0.3, vector, directory, hmatrix
--    default-language: Haskell2010
--
--executable attractor-train
--    main-is: train.hs
--    hs-source-dirs: scripts/attractor
--    other-modules: Attractor
--    ghc-options: -Wall -O -rtsopts -fno-warn-type-defaults
--        -fno-warn-missing-signatures -fno-warn-unused-do-bind
--    build-depends: base, goal-core==0.3, goal-geometry==0.3, goal-probability==0.3,
--        goal-simulation==0.3, goal-cognition==0.3, vector, directory, hmatrix, monad-par
--    default-language: Haskell2010
--
--executable attractor-simulation
--    main-is: simulation.hs
--    hs-source-dirs: scripts/attractor
--    other-modules: Attractor
--    ghc-options: -Wall -O -rtsopts -fno-warn-type-defaults
--        -fno-warn-missing-signatures -fno-warn-unused-do-bind
--    build-depends: base, goal-core==0.3, goal-geometry==0.3, goal-probability==0.3,
--        goal-simulation==0.3, goal-cognition==0.3, vector, directory, hmatrix
--    default-language: Haskell2010
--
--executable pendulum-train
--    main-is: train.hs
--    hs-source-dirs: scripts/pendulum
--    other-modules: Pendulum
--    ghc-options: -Wall -O -rtsopts -fno-warn-type-defaults
--        -fno-warn-missing-signatures -fno-warn-unused-do-bind
--    build-depends: base, goal-core==0.3, goal-geometry==0.3, goal-probability==0.3,
--        goal-simulation==0.3, goal-cognition==0.3, vector, directory, hmatrix
--    default-language: Haskell2010
--
--executable pendulum-simulation
--    main-is: simulation.hs
--    hs-source-dirs: scripts/pendulum
--    other-modules: Pendulum
--    ghc-options: -Wall -O -rtsopts -fno-warn-type-defaults
--        -fno-warn-missing-signatures -fno-warn-unused-do-bind
--    build-depends: base, goal-core==0.3, goal-geometry==0.3, goal-probability==0.3,
--        goal-simulation==0.3, goal-cognition==0.3, vector, directory, hmatrix
--    default-language: Haskell2010
--
--executable pendulum-noise-correlation
--    main-is: noise-correlation.hs
--    hs-source-dirs: scripts/pendulum
--    other-modules: Pendulum
--    ghc-options: -Wall -O -rtsopts -fno-warn-type-defaults
--        -fno-warn-missing-signatures -fno-warn-unused-do-bind
--    build-depends: base, goal-core==0.3, goal-geometry==0.3, goal-probability==0.3,
--        goal-simulation==0.3, goal-cognition==0.3, vector, directory, hmatrix, statistics
--    default-language: Haskell2010
--
--executable pendulum-population-code
--    main-is: population-code.hs
--    hs-source-dirs: scripts/pendulum
--    other-modules: Pendulum
--    ghc-options: -Wall -O -rtsopts -fno-warn-type-defaults
--        -fno-warn-missing-signatures -fno-warn-unused-do-bind
--    build-depends: base, goal-core==0.3, goal-geometry==0.3, goal-probability==0.3,
--        goal-simulation==0.3, goal-cognition==0.3, vector, directory, hmatrix
--    default-language: Haskell2010
