cabal-version: 2.4
name: goal-core
version: 0.16.8
synopsis: Core imports for the Geometric Optimization Libraries (Goal).
description: This library provides all the core functionality of Goal which is independent of the geometric structures of points and manifolds.
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: README.md
author: Sacha Sokoloski
maintainer: sacha.sokoloski@gmail.com
homepage: hub.darcs.net/alex404/goal
category: Math
build-type: Simple

library
    exposed-modules:
        Goal.Core,
        Goal.Core.HList,
        Goal.Core.Util,
        Goal.Core.Project,
        Goal.Core.Circuit,
        Goal.Core.Vector.Storable,
        Goal.Core.Vector.Generic,
        Goal.Core.Vector.Generic.Internal,
        Goal.Core.Vector.Generic.Mutable,
        Goal.Core.Vector.Boxed
    build-depends:
        base,
        directory,
        containers,
        vector,
        math-functions,
        hmatrix,
        vector-sized,
        finite-typelits,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
        deepseq,
        process,
        hmatrix-gsl,
        primitive,
        bytestring,
        cassava,
        criterion,
        optparse-applicative
    default-language: Haskell2010
    default-extensions:
        ScopedTypeVariables,
        ExplicitNamespaces,
        TypeOperators,
        KindSignatures,
        DataKinds,
        RankNTypes,
        TypeFamilies,
        FlexibleContexts,
        MultiParamTypeClasses,
        ConstraintKinds,
        GADTs,
        NoStarIsType,
        FlexibleInstances

benchmark convolutions
    type: exitcode-stdio-1.0
    main-is: convolutions.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        hmatrix,
        mwc-random,
        mwc-probability,
        criterion,
        goal-core
    default-language: Haskell2010

benchmark linear-algebra
    type: exitcode-stdio-1.0
    main-is: linear-algebra.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        hmatrix,
        mwc-random,
        mwc-probability,
        criterion,
        goal-core
    default-language: Haskell2010
