cabal-version: 3.0
name: goal-core
version: 0.19
author: Sacha Sokoloski
maintainer: sacha.sokoloski@mailbox.org
homepage: https://gitlab.com/sacha-sokoloski/goal
category: Math
build-type: Simple

library
    exposed-modules:
        Goal.Core,
        Goal.Core.Util,
        Goal.Core.Project,
        Goal.Core.Circuit,
        Goal.Core.Vector.Storable,
        Goal.Core.Vector.Generic,
        Goal.Core.Vector.Generic.Internal,
        Goal.Core.Vector.Generic.Mutable,
        Goal.Core.Vector.Boxed
    build-depends:
        base,
        directory,
        containers,
        vector,
        math-functions,
        hmatrix,
        vector-sized,
        finite-typelits,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
        deepseq,
        process,
        hmatrix-gsl,
        primitive,
        bytestring,
        cassava,
        async,
        criterion,
        optparse-applicative
    default-language: Haskell2010
    default-extensions:
        ScopedTypeVariables,
        ExplicitNamespaces,
        TypeOperators,
        KindSignatures,
        DataKinds,
        RankNTypes,
        TypeFamilies,
        FlexibleContexts,
        MultiParamTypeClasses,
        ConstraintKinds,
        GADTs,
        NoStarIsType,
        FlexibleInstances
    ghc-options: -Wall -O2

benchmark outer-products
    type: exitcode-stdio-1.0
    main-is: outer-products.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        hmatrix,
        mwc-random,
        mwc-probability,
        criterion,
        goal-core
    default-language: Haskell2010

benchmark convolutions
    type: exitcode-stdio-1.0
    main-is: convolutions.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        hmatrix,
        mwc-random,
        mwc-probability,
        criterion,
        goal-core
    default-language: Haskell2010

benchmark multiplications
    type: exitcode-stdio-1.0
    main-is: multiplications.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        hmatrix,
        mwc-random,
        mwc-probability,
        criterion,
        goal-core
    default-language: Haskell2010
