cabal-version: 3.8
name: goal-core
synopsis: Common, non-geometric tools for use with Goal
description: goal-core re-exports a number of other libraries, and provides a set of additional utility functions useful for scientific computing. In particular, implementations of Mealy Automata (Circuits), tools for working with CSV files and gnuplot, and a module which combines vector-sized vectors with hmatrix.
license: BSD-3-Clause
extra-source-files: README.md
version: 0.21
author: Sacha Sokoloski
maintainer: sacha.sokoloski@mailbox.org
homepage: https://github.com/alex404/goal
category: Math
build-type: Simple

library
    exposed-modules:
        Goal.Core,
        Goal.Core.Util,
        Goal.Core.Circuit,
        Goal.Core.Workspace,
        Goal.Core.Vector.Storable,
        Goal.Core.Vector.Storable.Linear,
        Goal.Core.Vector.Generic,
        Goal.Core.Vector.Generic.Internal,
        Goal.Core.Vector.Generic.Mutable,
        Goal.Core.Vector.Boxed
    build-depends:
        base,
        directory,
        containers,
        vector,
        math-functions,
        hmatrix,
        vector-sized,
        finite-typelits,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
        process,
        deepseq,
        hmatrix-gsl,
        primitive,
        bytestring,
        aeson,
        aeson-pretty,
        text,
        filepath,
        async,
        criterion,
        optparse-applicative
    default-language: GHC2021
    default-extensions:
        ExplicitNamespaces,
        DataKinds,
        TypeFamilies
    ghc-options: -Wall -O2

benchmark linear-algebra
    type: exitcode-stdio-1.0
    main-is: linear-algebra.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        hmatrix,
        mwc-random,
        criterion,
        goal-core
    default-language: GHC2021
    ghc-options: -Wall -O2

-- benchmark convolutions
--     type: exitcode-stdio-1.0
--     main-is: convolutions.hs
--     hs-source-dirs: benchmarks
--     build-depends:
--         base,
--         hmatrix,
--         mwc-random,
--         criterion,
--         goal-core
--     default-language: GHC2021
--     ghc-options: -Wall -O2
