cabal-version: 3.8
name: goal-examples
version: 0.21
synopsis: Examples of using goal
description: goal-examples
license: BSD-3-Clause
author: Sacha Sokoloski
maintainer: sacha.sokoloski@mailbox.org
homepage: https://github.com/alex404/goal
category: Math
build-type: Simple

executable gradient-descent
    main-is: gradient-descent.hs
    build-depends:
        base,
        goal-core,
        goal-geometry
    default-language: GHC2021
    ghc-options: -Wall -O2

executable univariate-distributions
    main-is: univariate-distributions.hs
    build-depends:
        base,
        aeson,
        goal-core,
        goal-geometry,
        goal-probability
    default-language: GHC2021
    ghc-options: -Wall -O2

executable multivariate-distributions
    main-is: multivariate-distributions.hs
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability
    default-language: GHC2021
    ghc-options: -Wall -O2



