cabal-version: 3.8
name: goal-examples
version: 0.21
synopsis: Examples of using goal
description: goal-examples
license: BSD-3-Clause
author: Sacha Sokoloski
maintainer: sacha.sokoloski@mailbox.org
homepage: https://github.com/alex404/goal
category: Math
build-type: Simple

executable gradient-descent
    main-is: gradient-descent.hs
    build-depends:
        base,
        goal-core,
        goal-geometry
    default-language: GHC2021
    ghc-options: -Wall -O2

executable neural-network
    main-is: neural-network.hs
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability
    default-language: GHC2021
    ghc-options: -Wall -O2

executable univariate-analytical
    main-is: univariate-analytical.hs
    build-depends:
        base,
        aeson,
        goal-core,
        goal-geometry,
        goal-probability
    default-language: GHC2021
    ghc-options: -Wall -O2

executable univariate-numerical
    main-is: univariate-numerical.hs
    build-depends:
        base,
        aeson,
        goal-core,
        goal-geometry,
        goal-probability
    default-language: GHC2021
    ghc-options: -Wall -O2

executable multivariate
    main-is: multivariate.hs
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability
    default-language: GHC2021
    ghc-options: -Wall -O2

executable boltzmann
    main-is: boltzmann.hs
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
        finite-typelits
    default-language: GHC2021
    ghc-options: -Wall -O2

executable population-codes
    main-is: population-codes.hs
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability
    default-language: GHC2021
    ghc-options: -Wall -O2

executable von-mises-mixture
    main-is: von-mises-mixture.hs
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability,
        goal-graphical
    default-language: GHC2021
    ghc-options: -Wall -O2

executable factor-analysis
    main-is: factor-analysis.hs
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability,
        goal-graphical,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
    default-language: GHC2021
    ghc-options: -Wall -O2

executable kalman-filter
    main-is: kalman-filter.hs
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability,
        goal-graphical
    default-language: GHC2021
    ghc-options: -Wall -O2

-- executable conjugated-harmoniums
--     main-is: conjugated-harmoniums.hs
--     build-depends:
--         base,
--         goal-core,
--         goal-geometry,
--         goal-probability,
--         goal-graphical
--     default-language: GHC2021
--     ghc-options: -Wall -O2
