cabal-version: 3.0
name: goal-geometry
version: 0.18
synopsis: Scientific computing on geometric objects
description:
    This library provides the geometric type system used by the rest of Goal
    (Geometric OptimizAtion Libraries).
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: README.md
author: Sacha Sokoloski
maintainer: sacha.sokoloski@mailbox.org
homepage: https://gitlab.com/sacha-sokoloski/goal
category: Math
build-type: Simple

library
    exposed-modules:
        Goal.Geometry,
        Goal.Geometry.Manifold,
        Goal.Geometry.Vector,
        Goal.Geometry.Map,
        Goal.Geometry.Map.Linear,
        Goal.Geometry.Map.Linear.Convolutional,
        Goal.Geometry.Map.NeuralNetwork,
        Goal.Geometry.Differential,
        Goal.Geometry.Differential.GradientPursuit
    build-depends:
        base,
        goal-core,
        ad,
        indexed-list-literals,
        ghc-typelits-natnormalise,
        ghc-typelits-knownnat
    default-language: Haskell2010
    default-extensions:
        ScopedTypeVariables,
        ExplicitNamespaces,
        TypeOperators,
        KindSignatures,
        DataKinds,
        RankNTypes,
        TypeFamilies,
        NoStarIsType,
        FlexibleContexts,
        MultiParamTypeClasses,
        GeneralizedNewtypeDeriving,
        StandaloneDeriving,
        FlexibleInstances
    ghc-options: -Wall -O2
