cabal-version: 3.8
name: goal-geometry
version: 0.21
synopsis: The basic geometric type system of Goal
description: goal-geometry provides the basic types and classes which drive the manifold/geometry based approach of Goal. Points and manifolds, dual spaces, function spaces and multilayer neural networks, and generic optimization routines are defined here.
license: BSD-3-Clause
extra-source-files: README.md
author: Sacha Sokoloski
maintainer: sacha.sokoloski@mailbox.org
homepage: https://github.com/alex404/goal
category: Math
build-type: Simple

library
    exposed-modules:
        Goal.Geometry,
        Goal.Geometry.Manifold,
        Goal.Geometry.Vector,
        Goal.Geometry.Map,
        Goal.Geometry.Map.Linear,
        -- Goal.Geometry.Map.Linear.Convolutional,
        Goal.Geometry.Map.NeuralNetwork,
        Goal.Geometry.Differential,
        Goal.Geometry.Differential.GradientPursuit
    build-depends:
        base,
        goal-core,
        deepseq,
        indexed-list-literals,
        ghc-typelits-natnormalise,
        ghc-typelits-knownnat
    default-language: GHC2021
    default-extensions:
        DataKinds,
        TypeFamilies
    ghc-options: -Wall -O2

benchmark inversion
    type: exitcode-stdio-1.0
    main-is: inversion.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        hmatrix,
        mwc-random,
        criterion,
        goal-core,
        goal-geometry,
        ghc-typelits-natnormalise,
        ghc-typelits-knownnat
    default-language: Haskell2010
    ghc-options: -Wall -O2


