cabal-version: 3.0
version: 0.17.0
name: goal-graphical
synopsis: Collections of random variables with articulated dependencies
description: This library provides various types and classes for working with
    probability distributions, exponential families, and neural networks.
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: README.md
author: Sacha Sokoloski
maintainer: sacha.sokoloski@mailbox.org
homepage: hub.darcs.net/alex404/goal
category: Math
build-type: Simple

library
    exposed-modules:
        Goal.Graphical.Generative
        Goal.Graphical.Conditional
        Goal.Graphical.Generative.Harmonium
        Goal.Graphical.Hybrid
        Goal.Graphical.Learning
        Goal.Graphical.Inference
        Goal.Graphical
    build-depends:
        base,
        mwc-random,
        mwc-probability,
        hmatrix-special,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
        goal-core,
        parallel,
        statistics,
        vector,
        hmatrix,
        containers,
        goal-geometry,
        goal-probability
    default-language: Haskell2010
    default-extensions:
        NoStarIsType,
        ScopedTypeVariables,
        ExplicitNamespaces,
        TypeOperators,
        KindSignatures,
        DataKinds,
        RankNTypes,
        TypeFamilies,
        FlexibleContexts,
        MultiParamTypeClasses,
        ConstraintKinds,
        FlexibleInstances
    ghc-options: -Wall -O2

benchmark regression
    type: exitcode-stdio-1.0
    main-is: regression.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability,
        goal-graphical,
        bytestring,
        cassava,
        criterion
    default-language: Haskell2010
    ghc-options: -Wall -O2
    ghc-options: -threaded

benchmark backpropagation
    type: exitcode-stdio-1.0
    main-is: backpropagation.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability,
        goal-graphical,
        criterion
    default-language: Haskell2010
    ghc-options: -Wall -O2
    ghc-options: -threaded
