cabal-version: 3.0
version: 0.19
name: goal-graphical
synopsis: Collections of random variables with articulated dependencies
description: This library provides types, classes, and functions for working with
    latent variable statistical models.
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: README.md
author: Sacha Sokoloski
maintainer: sacha.sokoloski@mailbox.org
homepage: https://gitlab.com/sacha-sokoloski/goal
category: Math
build-type: Simple

library
    exposed-modules:
        Goal.Graphical.Models
        Goal.Graphical.Models.Dynamic
        Goal.Graphical.Models.Harmonium
        Goal.Graphical.Learning
        Goal.Graphical.Inference
        Goal.Graphical
    build-depends:
        base,
        mwc-random,
        mwc-probability,
        hmatrix-special,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
        goal-core,
        parallel,
        statistics,
        vector,
        hmatrix,
        containers,
        goal-geometry,
        goal-probability
    default-language: Haskell2010
    default-extensions:
        NoStarIsType,
        GeneralizedNewtypeDeriving,
        StandaloneDeriving,
        ScopedTypeVariables,
        ExplicitNamespaces,
        TypeOperators,
        KindSignatures,
        DataKinds,
        RankNTypes,
        TypeFamilies,
        FlexibleContexts,
        MultiParamTypeClasses,
        ConstraintKinds,
        FlexibleInstances
    ghc-options: -Wall -O2

benchmark com-poisson
    type: exitcode-stdio-1.0
    main-is: com-poisson.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability,
        goal-graphical,
        bytestring,
        cassava,
        criterion
    default-language: Haskell2010
    ghc-options: -Wall -O2
    ghc-options: -threaded


