cabal-version: 3.8
version: 0.21
name: goal-graphical
synopsis: Optimization of latent variable and dynamical models with Goal
description: goal-graphical provides tools for with dynamical and graphical models. Various graphical models are defined here, e.g. mixture models and restricted Boltzmann machines, dynamical models such as HMMs and Kalman filters, and in both cases algorithms for fitting them e.g. expectation maximization and contrastive divergence minimization.
license: BSD-3-Clause
extra-source-files: README.md
author: Sacha Sokoloski
maintainer: sacha.sokoloski@mailbox.org
homepage: https://gitlab.com/sacha-sokoloski/goal
category: Math
build-type: Simple

library
    exposed-modules:
        Goal.Graphical.Models
        Goal.Graphical.Models.Dynamic
        Goal.Graphical.Models.Harmonium
        Goal.Graphical.Models.Harmonium.Gaussian
        Goal.Graphical.Models.Harmonium.Boltzmann
        Goal.Graphical.Learning
        Goal.Graphical.Inference
        Goal.Graphical
    build-depends:
        base,
        mwc-random,
        hmatrix-special,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
        goal-core,
        parallel,
        statistics,
        vector,
        hmatrix,
        containers,
        goal-geometry,
        goal-probability
    default-language: GHC2021
    default-extensions:
        ExplicitNamespaces,
        DataKinds,
        TypeFamilies
    ghc-options: -Wall

test-suite gaussian-tests
    main-is: gaussian.hs
    hs-source-dirs: tests
    build-depends:
        base,
        hmatrix,
        mwc-random,
        vector-sized,
        QuickCheck,
        goal-core,
        goal-geometry,
        goal-probability,
        goal-graphical
    default-language: GHC2021
    ghc-options: -Wall
