cabal-version: 2.4
version: 0.16.18
name: goal-probability
synopsis: Manifolds of probability distributions
description: This library provides various types and classes for working with
    probability distributions, exponential families, and neural networks.
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: README.md
author: Sacha Sokoloski
maintainer: sacha.sokoloski@gmail.com
homepage: hub.darcs.net/alex404/goal
category: Math
build-type: Simple

library
    exposed-modules:
        Goal.Probability
        Goal.Probability.Distributions
        Goal.Probability.ExponentialFamily
        Goal.Probability.Statistical
        Goal.Probability.LatentVariable
        Goal.Probability.ExponentialFamily.Harmonium
        Goal.Probability.ExponentialFamily.Conditional
        Goal.Probability.ExponentialFamily.Harmonium.Learning
        Goal.Probability.ExponentialFamily.Harmonium.Inference
    build-depends:
        base,
        mwc-random,
        mwc-probability,
        hmatrix-special,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
        goal-core,
        statistics,
        vector,
        hmatrix,
        containers,
        goal-geometry
    default-language: Haskell2010
    default-extensions:
        NoStarIsType,
        ScopedTypeVariables,
        ExplicitNamespaces,
        TypeOperators,
        KindSignatures,
        DataKinds,
        RankNTypes,
        TypeFamilies,
        FlexibleContexts,
        MultiParamTypeClasses,
        ConstraintKinds,
        FlexibleInstances

benchmark regression
    type: exitcode-stdio-1.0
    main-is: regression.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability,
        bytestring,
        cassava,
        criterion
    default-language: Haskell2010

benchmark backpropagation
    type: exitcode-stdio-1.0
    main-is: backpropagation.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability,
        criterion
    default-language: Haskell2010
