cabal-version: 3.0
version: 0.17.0
name: goal-probability
synopsis: Manifolds of probability distributions
description: This library provides types and classes for working with
    probability distributions and stastical manifolds.
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: README.md
author: Sacha Sokoloski
maintainer: sacha.sokoloski@mailbox.org
homepage: hub.darcs.net/alex404/goal
category: Math
build-type: Simple

library
    exposed-modules:
        Goal.Probability
        Goal.Probability.Distributions
        Goal.Probability.Distributions.CoMPoisson
        Goal.Probability.ExponentialFamily
        Goal.Probability.Conditional
        Goal.Probability.Statistical
    build-depends:
        base,
        mwc-random,
        mwc-probability,
        hmatrix-special,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
        goal-core,
        parallel,
        statistics,
        vector,
        hmatrix,
        containers,
        goal-geometry
    default-language: Haskell2010
    default-extensions:
        NoStarIsType,
        ScopedTypeVariables,
        ExplicitNamespaces,
        TypeOperators,
        KindSignatures,
        DataKinds,
        RankNTypes,
        TypeFamilies,
        FlexibleContexts,
        MultiParamTypeClasses,
        ConstraintKinds,
        FlexibleInstances
    ghc-options: -Wall -O2

benchmark regression
    type: exitcode-stdio-1.0
    main-is: regression.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability,
        bytestring,
        cassava,
        criterion
    default-language: Haskell2010
    ghc-options: -Wall -O2
    ghc-options: -threaded

benchmark backpropagation
    type: exitcode-stdio-1.0
    main-is: backpropagation.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        goal-core,
        goal-geometry,
        goal-probability,
        criterion
    default-language: Haskell2010
    ghc-options: -Wall -O2
    ghc-options: -threaded
