cabal-version: 3.8
version: 0.21
name: goal-probability
synopsis: Optimization on manifolds of probability distributions with Goal
description: goal-probability provides tools for implementing and applying basic statistical models. The core concept of goal-probability are statistical manifolds, i.e. manifold of probability distributions, with a focus on exponential family distributions.
license: BSD-3-Clause
extra-source-files: README.md
author: Sacha Sokoloski
maintainer: sacha.sokoloski@mailbox.org
homepage: https://github.com/alex404/goal
category: Math
build-type: Simple

library
    exposed-modules:
        Goal.Probability
        Goal.Probability.Statistical
        Goal.Probability.ExponentialFamily
        Goal.Probability.Distributions
        Goal.Probability.Distributions.CoMPoisson
        Goal.Probability.Distributions.Gaussian
        Goal.Probability.Distributions.Boltzmann
        Goal.Probability.Conditional
    build-depends:
        base,
        mwc-random,
        hmatrix-special,
        math-functions,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
        finite-typelits,
        goal-core,
        parallel,
        statistics,
        vector,
        hmatrix,
        containers,
        goal-geometry
    default-language: GHC2021
    default-extensions:
        ExplicitNamespaces,
        DataKinds,
        TypeFamilies
    ghc-options: -Wall

benchmark backprop-benchmarks
    type: exitcode-stdio-1.0
    main-is: backprop.hs
    hs-source-dirs: benchmarks
    build-depends:
        base,
        hmatrix,
        criterion,
        goal-core,
        goal-geometry,
        goal-probability,
    default-language: GHC2021
    ghc-options: -Wall


