name: goal-simulation
version: 0.13
synopsis: Mealy based simulation tools
description: This library provides various tools for simulating deterministic and
    stochastic processes, including simple mechanical systems. Functions are
    also provided for rendering animations.
license: BSD3
license-file: LICENSE
extra-source-files: README.md
author: Sacha Sokoloski
maintainer: sacha.sokoloski@gmail.com
homepage: hub.darcs.net/alex404/goal
category: Math
build-type: Simple
cabal-version: >=1.10

library
    exposed-modules:
        Goal.Simulation,
        Goal.Simulation.Circuit,
        Goal.Simulation.Circuit.Optimization,
        Goal.Simulation.Chain
        --Goal.Simulation.Flow,
        --Goal.Simulation.Plot,
        --Goal.Simulation.Physics,
        --Goal.Simulation.Physics.Models.Pendulum
    default-extensions: TypeOperators, TypeFamilies, FlexibleInstances,
        FlexibleContexts, MultiParamTypeClasses, ScopedTypeVariables,
        RankNTypes, Arrows, DataKinds
    build-depends:
        base,
        goal-core,
        goal-geometry,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
        goal-probability
        --process==1.4.*
    default-language: Haskell2010
    ghc-options: -O2 -Wall -fplugin=GHC.TypeLits.KnownNat.Solver -fplugin=GHC.TypeLits.Normalise

--benchmark clustering
--    type: exitcode-stdio-1.0
--    main-is: clustering.hs
--    hs-source-dirs: benchmarks
--    build-depends:
--        base,
--        goal-core,
--        goal-geometry,
--        goal-probability,
--        goal-simulation,
--        criterion
--    default-language: Haskell2010
--    ghc-options: -O2
