name: goal-simulation
version: 0.14
synopsis: Mealy based simulation tools
description: This library provides various tools for simulating deterministic and
    stochastic processes, including simple mechanical systems. Functions are
    also provided for rendering animations.
license: BSD3
license-file: LICENSE
extra-source-files: README.md
author: Sacha Sokoloski
maintainer: sacha.sokoloski@gmail.com
homepage: hub.darcs.net/alex404/goal
category: Math
build-type: Simple
cabal-version: >=1.10

library
    exposed-modules:
        Goal.Simulation,
        Goal.Simulation.Circuit,
        Goal.Simulation.Circuit.Optimization,
        Goal.Simulation.Chain
        --Goal.Simulation.Flow,
        --Goal.Simulation.Physics,
        --Goal.Simulation.Physics.Models.Pendulum
    build-depends:
        base,
        goal-core,
        goal-geometry,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise,
        goal-probability
    default-language: Haskell2010
    ghc-options: -O2 -Wall -fplugin=GHC.TypeLits.KnownNat.Solver -fplugin=GHC.TypeLits.Normalise
